--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    font-family: 'Inter';
+}
+
+.w-thumbnail {
+    width: 100px;
+    height: 100px;
+}
+
+.product-card:hover {
+    outline: #000000 solid 2px;
+}
